<resources>
    <string name="app_name">Cuenca Móvil</string>
    <string name="txt_open">Open</string>
    <string name="txt_close">Close</string>
    <string name="header_navigationbar">Cuenca Móvil</string>
    <string name="nav_title_help">Ayuda</string>
    <string name="nav_title_share">Comunicación</string>
    <string name="nav_title_legal">Legal</string>
    <string name="nav_faq">Preguntas frecuentes</string>
    <string name="nav_problems">¿La app no funciona bien?</string>
    <string name="nav_share">Compartir</string>
    <string name="nav_privacy">Política de privacidad</string>
    <string name="nav_terms">Términos y condiciones</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_title_home">Navegación</string>
    <string name="btn_notifyIncident">Notificar incidencia</string>
    <string name="btn_makeRequest">Crear petición</string>
    <string name="btn_checkHistorial">Historial de incidencias</string>
    <string name="tv_tituloCardviewTwitter">Cuenca en las redes</string>
    <string name="tv_tituloCardviewAssociations">Asociaciones culturales</string>
    <string name="btn_cardviewAllHistorial">Todos los reportes</string>
    <string name="btn_cardviewHome">Ver más</string>
    <string name="btn_cardviewPersonalHistorial">Mis reportes</string>
    <string name="tv_tituloCardviewHistory">Reportes</string>
    <string name="tv_titleCardViewIncident">Escribe una descripción breve del problema*:</string>
    <string name="tv_titleReportFragment">Crear reporte</string>
    <string name="tv_cvCategory">¿A qué categoría pertenece?*</string>
    <string name="tv_cvMap">¿Dónde está ubicado?</string>
    <string name="tv_cvPhoto">Alguna foto nos ayudaría a identificar el problema:</string>
    <string name="et_description">Descripción...</string>
    <string name="info_picture_canceled">Foto cancelada</string>
    <string name="image_width">200</string>
    <string name="image_height">100</string>
    <string name="btn_sendReport">Enviar reporte</string>
    <string name="url_firebaseStorage">gs://cuenca-movil-22b63.appspot.com</string>
    <string name="tv_titleReportsList">Todos los reportes</string>
    <string name="under_const">En construcción...</string>
    <string name="title_dialogReport">Informe enviado</string>
    <string name="message_dialogReport">El informe se ha enviado con éxito</string>
    <string name="option_dialogReport">Aceptar</string>
    <string name="title_dialogExitApp">Salir de la aplicación</string>
    <string name="message_dialogExitApp">¿Desea salir de la aplicación?</string>
    <string name="option1_dialogExitApp">Salir</string>
    <string name="option2_dialogExitApp">Continuar conectado</string>

    <string-array name="status">
        <item>Enviado</item>
        <item>Admitido</item>
        <item>Rechazado</item>
        <item>Finalizado</item>
    </string-array>

    <string-array name="sp_categories">
        <item>Selecciona una categoría...</item>
        <item>Alumbrado público</item>
        <item>Aparcamiento regulado</item>
        <item>Árboles y parques</item>
        <item>Áreas infantiles y de mayores</item>
        <item>Calzadas y aceras</item>
        <item>Cubos y contenedores</item>
        <item>Fuentes</item>
        <item>Limpieza y pintadas</item>
        <item>Mobilidario urbano</item>
        <item>Papeleras</item>
        <item>Plagas</item>
        <item>Retirada de elementos</item>
        <item>Señales y semáforos</item>
        <item>Vehículos abandonados</item>
    </string-array>
</resources>